...
                }
                if viewModel.hasMorePages {
                    buildLoadMoreRowView()
                }
            }
            .listStyle(.plain)
            .navigationTitle("Photo Gallery List")
        }
        .accessibility(identifier: "PhotoGalleryListview")
        .environment(viewModel)
        .onAppear {
            viewModel.loadNextPage()
        }
...
    }
    
    @ViewBuilder
    private func buildLoadMoreRowView() -> some View {
        HStack {
            Spacer()
            Button("Load More") {
                viewModel.loadNextPage()
            }
            .buttonStyle(.borderedProminent)
            Spacer()
        }
    }
...
